<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/minebg">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_img_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/childcare"
                    app:civ_border_color="@color/colorGray"
                    app:civ_border_width="2dp"/>
                <TextView
                    android:id="@+id/user_tv_username"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/user_tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorGray"/>
            </LinearLayout>

        </RelativeLayout>
        <ListView
            android:id="@+id/user_ll_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>
        <Button
            android:id="@+id/user_btn_login_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_theme_bg"
            android:text="@string/login_out"
            android:textColor="@android:color/white"
            android:layout_margin="30dp"/>
    </LinearLayout>

</ScrollView>